resized, cols, fixed wrapping, split cols [#713]

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -57,6 +57,10 @@ caption {
   }
 }
 
+table { table-layout: fixed; }
+table th, table td { overflow: hidden; }
+
+
 td.count {
   text-align: center;
 }
@@ -107,8 +111,24 @@ td.date {
     overflow:hidden;
   }
 
+  .width-50px {
+    width: 50px;
+  }
+
   .width-5 {
     width: 5%;
+  }
+
+  .width-7 {
+    width: 7%;
+  }
+
+  .width-10 {
+    width: 10%;
+  }
+
+  .width-15 {
+    width: 15%;
   }
 
   .width-20 {
